--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 
 header{
     background-image: url(./images/banner/banner3.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
     height: 100vh;
     position: relative;
 }
@@ -22,7 +23,7 @@ header{
 }
 .banner-heading{
     margin-bottom: 30px;
-    font-family: sans-serif;
+    
     color: white;
     font-weight: bold;
     font-size: 65px;
@@ -37,4 +38,37 @@ header{
     padding: 30px 50px;
     border-radius: 10px;
     font-size: 20px;
+}
+
+/* section- */
+
+.section-container{
+    margin: auto;
+    width: 90%;
+    margin-top: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.person-img{
+    width: 50%;
+}
+.person-details{
+
+    width: 50%;
+}
+
+.person-details>h1{
+    font-size: 60px;
+    margin-bottom: 20px;
+}
+.person-details>p{
+    font-size: 25px;
+    margin-bottom: 20px;
+}
+.person-info{
+    font-size: 20px;
+}
+.check-icon{
+    color: green;
 }
